# agentcapital-ai

./: .env.example  .gitignore  Dockerfile  README.md  package.json  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/evals/: runner.py  test_evals.py
backend/evals/datasets/: adversarial.jsonl
backend/scripts/: generate_pdfs.py  run_evals.py  setup_db.py
backend/src/agents/: base.py  data_validator.py  document_ingest.py  entity_resolver.py  portfolio_analyst.py  report_generator.py  risk_monitor.py
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/core/: contracts.py  llm.py  orchestrator.py  state.py  telemetry.py
backend/src/db/: client.py  reset.py  seed.py
backend/src/db/migrations/: 001_core.sql  002_rag.sql
backend/src/guardrails/: input_guard.py  output_guard.py
backend/src/observability/: logger.py
backend/src/retrieval/: chunker.py  embeddings.py  retriever.py
backend/tests/: conftest.py  test_base_agent.py  test_content_flatten.py  test_llm_fallback.py  test_orchestrator.py  test_report_fallback.py  test_retrieval.py  test_settings.py  test_state.py
docs/: architecture.md  failure_modes.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentDrawer.tsx  AgentFlow.tsx  AgentRail.tsx  ExecutiveReportView.tsx  GraphView.tsx  LoadingScreen.tsx  MetricsStrip.tsx  Pipeline.tsx  RunConsole.tsx
frontend/lib/: api.ts  pipeline.ts
scripts/: demo_up.ps1  demo_up.sh
(+1 files in other folders)
