[project]
name = "polaris"
version = "0.1.0"
description = "Polaris — autonomous capital-call processing for family offices (multi-agent system on LangGraph)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "google-genai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.0",
    "pymupdf>=1.24",
    "reportlab>=4.2",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "supabase>=2.6",
    "upstash-redis>=1.1",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
pythonpath = ["."]
asyncio_mode = "auto"
